--- a/clash_domains_payload.yaml
+++ b/clash_domains_payload.yaml
@@ -2,11 +2,39 @@
 # @ConfigName scraping 配置文件
 # @Author @Chill-lucky
 # @UpdateTime 2025/06/12 16:30 UTC/GMT +8
-# @Function 媒体刮削常用域名，配合Jellyfin/Emby/Plex/fnOS等使用
+# @Function 综合类
 # @Thanks @ChatGPT
 # @ConfigVersion 1.0
 #==========================================
 payload:
+  # Docker / 容器相关
+  - DOMAIN-SUFFIX,docker.io
+  - DOMAIN-SUFFIX,docker.com
+  - DOMAIN-SUFFIX,hub.docker.com
+  - DOMAIN-SUFFIX,registry-1.docker.io
+  - DOMAIN-SUFFIX,ghcr.io
+
+  # Python 软件包相关
+  - DOMAIN-SUFFIX,pypi.org
+  - DOMAIN-SUFFIX,pythonhosted.org
+
+  # GitHub 相关
+  - DOMAIN-SUFFIX,github.com
+  - DOMAIN-SUFFIX,githubusercontent.com
+  - DOMAIN-SUFFIX,githubassets.com
+  - DOMAIN-SUFFIX,raw.githubusercontent.com
+  - DOMAIN-SUFFIX,api.github.com
+  - DOMAIN-SUFFIX,codeload.github.com
+  - DOMAIN-SUFFIX,gist.github.com
+  - DOMAIN-SUFFIX,avatars.githubusercontent.com
+
+  # CDN / 加速相关
+  - DOMAIN-SUFFIX,azureedge.net
+
+  # NAS / 其他
+  - DOMAIN-SUFFIX,unraid.net
+
+  # Media Scraping / 刮削相关
   - DOMAIN-SUFFIX,tmdb.org
   - DOMAIN-SUFFIX,api.tmdb.org
   - DOMAIN-SUFFIX,tvdb.com
@@ -35,6 +63,7 @@ payload:
   - DOMAIN-SUFFIX,ump.plex.tv
   - DOMAIN-SUFFIX,mpm.plex.tv
   - DOMAIN-SUFFIX,meta.plex.tv
+  - DOMAIN-SUFFIX,metadata.plex.tv
   - DOMAIN-SUFFIX,plex.direct
   - DOMAIN-SUFFIX,plexapp.com
   - DOMAIN-SUFFIX,plex.media
